--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,33 @@
 <html>
 <head>
-	<title>Simple login</title>
+	<title>ChainMail</title>
 	<script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script src="/chat.js"</script>
+	<link rel = "shortcut icon" href = "http://hydra-media.cursecdn.com/pathofexile.gamepedia.com/8/8a/Chainmail_Doublet.png?version=c4d9deb6f4a3a6acdbdba7881b66842d"> 	
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
+	<script src="/chat.js"></script>
+
+
 	<ul class="pages">
 	<li class="chat page">
 		<div class="chatArea">
 			<ul class="messages"></ul>
 		</div>
 		<input class="inputMessage"/>
+		<button onclick="sendMessage()"> Send </button>
 	</li>
 	<li class="login page">
 		<div class="form">
 		<h3 class="title">Username<h3>
 		<input class="usernameInput" type="text" maxlength="45" />
+		<button onclick="setUsername()"> enter username </button>
 		</div>
 	</li>
 	</ul>
+
+
 </body>
 </html>
